<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.catchy.fishingpoll.LoginActivity$PlaceholderFragment" >

    <Spinner
        android:id="@+id/launch_spinner_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:entries="@array/language_list" />

    <EditText
        android:id="@+id/account_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/launch_spinner_language"
        android:layout_below="@id/launch_spinner_language"
        android:layout_marginTop="24dp"
		android:layout_marginLeft="12dp"
		android:layout_toRightOf="@id/account_avatar"
		android:ems="10"
        android:hint="@string/user_name" >

        <requestFocus />
    </EditText>

	<TextView
		android:id="@+id/account_text_name_warning"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@id/launch_spinner_language"
		android:layout_below="@id/account_username"
		android:layout_marginTop="12dp"
		android:visibility="gone"
		android:hint="@string/launch_name_taken" >
	</TextView>

	<com.catchy.fishingpoll.PPPinAvatarImageButton
		android:id="@+id/account_avatar"
		android:scaleType="fitCenter"
		android:layout_width="96dp"
		android:layout_height="96dp"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:background="@android:drawable/gallery_thumb"
		android:contentDescription="@string/account_avatar_desc"
		/>

	<EditText
		android:id="@+id/account_email"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_below="@id/account_username"
		android:layout_marginTop="12dp"
		android:ems="10"
		android:hint="@string/email_address"
		android:inputType="textEmailAddress" />

	<EditText
		android:id="@+id/account_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_below="@id/account_email"
		android:layout_marginTop="12dp"
		android:ems="10"
		android:hint="@string/pass_word"
		android:inputType="textPassword" />

	<EditText
		android:id="@+id/account_password_verification"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_below="@id/account_password"
		android:layout_marginTop="12dp"
		android:ems="10"
		android:hint="@string/pass_word_check"
		android:inputType="textPassword" />

	<TextView
		android:id="@+id/account_text_password_warning"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@id/launch_spinner_language"
		android:layout_below="@id/account_password_verification"
		android:layout_marginTop="12dp"
		android:visibility="gone"
		android:hint="@string/login_password_doesnt_match" >
	</TextView>

    <CheckBox
        android:id="@+id/account_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="59dp"
        android:layout_marginLeft="20dp"
        android:text="@string/new_user" />

    <Button
        android:id="@+id/account_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/account_new"
        android:layout_alignBottom="@id/account_new"
        android:layout_alignRight="@id/launch_spinner_language"
        android:text="@string/log_in" />

</RelativeLayout>
