<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.catchy.fishingpoll.LoginActivity$PlaceholderFragment" >

	<EditText
		android:id="@+id/scientist_organization"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:layout_marginTop="24dp"
		android:hint="@string/organization" >

		<requestFocus />
	</EditText>

	<EditText
		android:id="@+id/scientist_division"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@id/scientist_organization"
		android:layout_below="@id/scientist_organization"
		android:layout_marginTop="12dp"
		android:hint="@string/division" />

	<EditText
		android:id="@+id/scientist_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@id/scientist_organization"
		android:layout_below="@id/scientist_division"
		android:layout_marginTop="12dp"
		android:hint="@string/title" />

</RelativeLayout>
